<resources>
	<string name="bluetooth_unsupported">This device doesn\'t support Bluetooth Low Energy</string>
	<string name="bluetooth_notauthorized">This app is not authorized to use the Bluetooth Low Energy</string>
	<string name="bluetooth_poweredoff">Bluetooth is currently powered off</string>
	<string name="bluetooth_locationpermission_disabled_text">Location Services should be enabled to scan bluetooth peripherals.\nPlease, go to settings and enable it to start scanning peripherals</string>
	<string name="locationpermission_notavailable_title">This app needs location access</string>
	<string name="locationpermission_notavailable_text">Since location access has not been granted, the app will not generate location data</string>
	<string name="bluetooth_permissions_notavailable_title">Bluetooth Scanning not available</string>
	<string name="bluetooth_permissions_notavailable_text">Since bluetooth permissions have not been granted, the app will not be able to scan for Bluetooth peripherals</string>
	<string name="bluetooth_scanner_errorregisteringapp">App cannot be registered for bluetooth scanning.\nPlease reset bluetooth and try again.</string>
	<string name="bluetooth_connecting_error">Error connecting to peripheral</string>
	<string name="bluetooth_advertising_start_error">Error starting advertising</string>
	<string name="main_tabbar_singlemode">Select Device</string>
	<string name="main_tabbar_centralmode">Central Mode</string>
	<string name="main_tabbar_peripheralmode">Peripheral Mode</string>
	<string name="scanner_title">Peripherals</string>
	<string name="scanner_backbutton">Disconnect</string>
	<string name="scanner_splitmasterbutton">Peripheral List</string>
	<string name="scanner_subtitle">Peripherals found</string>
	<string name="scanner_uartavailable">Uart capable</string>
	<string name="scanner_beacon">Beacon</string>
	<string name="scanner_uribeacon">Uri-Beacon</string>
	<string name="scanner_notconnectable">Not Connectable</string>
	<string name="scanner_peripheraldisconnected">Peripheral disconnected</string>
	<string name="scanner_unnamed">&lt;Unknown&gt;</string>
	<string name="scanner_connect">Connect</string>
	<string name="scanner_disconnect">Disconnect</string>
	<string name="scanner_start_action">Start Scan</string>
	<string name="scanner_stop_action">Stop Scan</string>
	<string name="scanner_filter_name_title">Name:</string>
	<string name="scanner_filter_name_hint">Filter by name</string>
	<string name="scanner_filter_rssi_title">RSSI &gt;=</string>
	<string name="scanner_filter_rssi_description_format" formatted="false">RSSI &gt;= %d</string>
	<string name="scanner_filter_unnamed_title">Show unnamed devices</string>
	<string name="scanner_filter_unnamed_description">with name</string>
	<string name="scanner_filter_uart_title">Must have UART Service</string>
	<string name="scanner_filter_uart_description">with UART</string>
	<string name="scanner_filter_name_matchsection">Match</string>
	<string name="scanner_filter_name_casesection">Case sensitivity</string>
	<string name="scanner_filter_currentfilter_format" formatted="false">Filter: %s</string>
	<string name="scanner_filter_nofilter">No filter selected</string>
	<string name="scanner_filter_rssivalue_format" formatted="false">%d dBm</string>
	<string name="scanner_filter_name_settings_contains">Name contains</string>
	<string name="scanner_filter_name_settings_exact">Name equals</string>
	<string name="scanner_filter_name_settings_sensitive">Matching case</string>
	<string name="scanner_filter_name_settings_insensitive">Ignoring case</string>
	<string name="scanner_filteredoutinfo_single_format" formatted="false">%d peripheral filtered out</string>
	<string name="scanner_filteredoutinfo_multiple_format" formatted="false">%d peripherals filtered out</string>
	<string name="scanresult_connect">Connect</string>
	<string name="scanresult_disconnect">Disconnect</string>
	<string name="scanresult_advertisement_viewrawdata">View Raw Data</string>
	<string name="scanresult_advertisement_rawdata_title">Advertising Raw Data</string>
	<string name="scanresult_advertisement_localname">Local name</string>
	<string name="scanresult_advertisement_address">Address</string>
	<string name="scanresult_advertisement_manufacturer">Manufacturer</string>
	<string name="scanresult_advertisement_services">Services</string>
	<string name="scanresult_advertisement_servicesuuids">Services UUIDs</string>
	<string name="scanresult_advertisement_overflowservices">Overflow services</string>
	<string name="scanresult_advertisement_servicesdata">Services data</string>
	<string name="scanresult_advertisement_servicesdata_uuid">UUID</string>
	<string name="scanresult_advertisement_servicesdata_data">Data</string>
	<string name="scanresult_advertisement_servicessolicited">Services solicited</string>
	<string name="scanresult_advertisement_connectable">Connectable</string>
	<string name="scanresult_advertisement_connectable_true">true</string>
	<string name="scanresult_advertisement_connectable_false">false</string>
	<string name="scanresult_advertisement_connectable_unknown">unknown</string>
	<string name="scanresult_advertisement_datapacket">Advertising packet data</string>
	<string name="scanresult_advertisement_txpower">TX Power Level</string>
	<string name="scanresult_advertisement_uribeacon_uri">Uri</string>
	<string name="scanresult_advertisement_beacon_uuid">UUID</string>
	<string name="scanresult_advertisement_beacon_major">Major</string>
	<string name="scanresult_advertisement_beacon_minor">Minor</string>
	<string name="multiconnect_title">Multiple UART mode</string>
	<string name="multiconnect_connecteddevices_single_format" formatted="false">Connected to %d device</string>
	<string name="multiconnect_connecteddevices_multiple_format" formatted="false">Connected to %d devices</string>
	<string name="multiconnect_start_action">Start</string>
	<string name="peripheral_advertisinginfo">Advertising Info</string>
	<string name="peripheral_localname">Local Name</string>
	<string name="peripheral_services">Services</string>
	<string name="peripheral_characteristics">Characteristics</string>
	<string name="peripheral_unknown_title">Undefined Peripheral</string>
	<string name="peripheral_dis_title">Device Information Service</string>
	<string name="peripheral_uart_title">UART</string>
	<string name="peripheral_notsupported">Peripheral mode is not supported on your device</string>
	<string name="peripheral_advertising_starterror_undefined">Peripheral mode can\'t not be started</string>
	<string name="peripheral_advertising_starterror_toolarge">Peripheral mode can\'t not be started: Advertising data too large</string>
	<string name="peripheral_dis_manufacturer">Manufacturer</string>
	<string name="peripheral_dis_modelnumber">Model Number</string>
	<string name="peripheral_dis_serialnumber">Serial Number</string>
	<string name="peripheral_dis_hardwarenumber">Hardware Number</string>
	<string name="peripheral_dis_firmwarerevision">Firmware Revision</string>
	<string name="peripheral_dis_softwarerevision">Software Revision</string>
	<string name="autoupdate_title">Update available</string>
	<string name="autoupdate_description_format" formatted="false">Software version %s is available</string>
	<string name="autoupdate_update">Go to updates</string>
	<string name="autoupdate_startupdate">Start update</string>
	<string name="autoupdate_later">Ask later</string>
	<string name="autoupdate_ignore">Ignore</string>
	<string name="peripheraldetails_select">Connect to a peripheral from the list on the left</string>
	<string name="peripheraldetails_connecting">Connecting&#8230;</string>
	<string name="peripheraldetails_discoveringservices">Discovering services&#8230;</string>
	<string name="peripheraldetails_errordiscoveringservices">Error discovering peripheral services</string>
	<string name="peripheraldetails_checkingupdates">Checking updates&#8230;</string>
	<string name="peripheralmodules_title">Modules</string>
	<string name="peripheralmodules_sectiontitle_device_single">Device</string>
	<string name="peripheralmodules_sectiontitle_device_multiconnect">Multiple Devices</string>
	<string name="peripheralmodules_sectiontitle_modules">Modules</string>
	<string name="peripheralmodules_rssi_format" formatted="false">%d dBm</string>
	<string name="peripheralmodules_rssi_unavailable">not available</string>
	<string name="peripheralmodules_battery_format" formatted="false">%d%%</string>
	<string name="info_tab_title">Info</string>
	<string name="info_navigation_title_format" formatted="false">Info - %s</string>
	<string name="info_type_service">Service</string>
	<string name="info_type_characteristic">Characteristic</string>
	<string name="info_type_descriptor">Descriptor</string>
	<string name="info_data_hex">Data (Hex):</string>
	<string name="info_data_dec">Data (Dec):</string>
	<string name="info_uuid">UUID:</string>
	<string name="info_help_title">Info</string>
	<string name="uart_send_action">Send</string>
	<string name="uart_input_ctrlc">CTRL-C</string>
	<string name="uart_input_ctrld">CTRL-D</string>
	<string name="uart_input_ctrlz">CTRL-Z</string>
	<string name="uart_sentbytes_format" formatted="false">Sent: %d bytes</string>
	<string name="uart_receivedbytes_format" formatted="false">Received: %d bytes</string>
	<string name="uart_settings_displayMode_timestamp">Timestamp</string>
	<string name="uart_settings_displayMode_text">Text</string>
	<string name="uart_settings_dataMode_title">Data Mode</string>
	<string name="uart_settings_dataMode_hex">Hex</string>
	<string name="uart_settings_dataMode_ascii">Ascii</string>
	<string name="uart_settings_echo_title">Show Echo</string>
	<string name="uart_settings_eol_title">Send EoL</string>
	<string name="uart_settings_eolCharacters_title">EoL Characters</string>
	<string name="uart_eolmode_n">\\n</string>
	<string name="uart_eolmode_r">\\r</string>
	<string name="uart_eolmode_nr">\\n\\r</string>
	<string name="uart_eolmode_rn">\\r\\n</string>
	<string name="uart_settings_export_title">Export&#8230;</string>
	<string name="uart_mqtt_action">MQTT</string>
	<string name="dfu_pickfiles_hex_title">Hex File:</string>
	<string name="dfu_pickfiles_init_title">Init File:</string>
	<string name="dfu_pickfiles_hex_action">Choose</string>
	<string name="dfu_pickfiles_init_action">Choose</string>
	<string name="dfu_pickfiles_file_empty">&lt;No file selected&gt;</string>
	<string name="colorpicker_boardselector_action">Board Selector</string>
	<string name="colorpicker_boardtype_action">Board Type</string>
	<string name="neopixelboardselector_standardboardsizes_title">Standard board sizes</string>
	<string name="neopixelboardselector_customboardsize_title">Custom board size</string>
	<string name="neopixelboardselector_customboardsize_linestrip">Line Strip</string>
	<string name="neopixelcomponentselector_speed_title">Speed</string>
	<string name="neopixelcomponentselector_pixelorder_title">Pixel Order</string>
	<string name="neopixelcomponentselector_speed_400khz">400 Khz Mode</string>
	<string name="thermalcamera_waitingforuart">Waiting for Uart&#8230;</string>
	<string name="imagetransfer_resolution_title">Resolution:</string>
	<string name="imagetransfer_resolution_value_default">Default</string>
	<string name="imagetransfer_image_title">Image:</string>
	<string name="imagetransfer_transfermode_title">Transfer mode:</string>
	<string name="imagetransfer_transfermode_value_withoutresponse">Without Response</string>
	<string name="imagetransfer_imageorigin_choose">Choose Image</string>
	<string name="imagetransfer_send_action">Send Image</string>
	<string name="imagetransfer_colorspace_title">Bit Depth:</string>
	<string name="imagetransfer_colorspace_16bit">16-bit</string>
	<string name="common_help_action">Help</string>
</resources>