<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.adafruit.bluefruit.le.connect.app.ControllerActivity">

    <item
        android:id="@+id/action_boardSelector"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/colorpicker_boardselector_action"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_boardComponentsSelector"
        android:icon="@drawable/ic_pie_chart_outlined_white_24dp"
        android:title="@string/colorpicker_boardtype_action"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/common_help_action"
        app:showAsAction="always" />
</menu>
