<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".app.imagetransfer.ImageTransferFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imagetransfer_image_title"
                android:textColor="@color/infotext" />

            <Button
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="@dimen/imagetransfer_values_minwidth"
                android:text="@string/imagetransfer_imageorigin_choose" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imagetransfer_resolution_title"
                android:textColor="@color/infotext" />

            <Button
                android:id="@+id/resolutionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="@dimen/imagetransfer_values_minwidth"
                android:text="@string/imagetransfer_resolution_value_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imagetransfer_colorspace_title"
                android:textColor="@color/infotext" />

            <Button
                android:id="@+id/colorSpaceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="@dimen/imagetransfer_values_minwidth"
                android:text="@string/imagetransfer_colorspace_16bit" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imagetransfer_transfermode_title"
                android:textColor="@color/infotext" />

            <Button
                android:id="@+id/transferModeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="@dimen/imagetransfer_values_minwidth"
                android:text="@string/imagetransfer_transfermode_value_withoutresponse" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/resolutionContainerViewGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/resolutionViewGroup"
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:background="@drawable/border_white"
            android:padding="1dp">

            <ImageView
                android:id="@+id/cameraImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/imagetransfer_test2" />
        </RelativeLayout>

        <TextView
            android:id="@+id/uartWaitingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/thermalcamera_waitingforuart"
            android:textColor="@color/infotext" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/rotateLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:src="@drawable/imagetransfer_rotate_left" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/imagetransfer_send_action" />

        <ImageButton
            android:id="@+id/rotateRightButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:src="@drawable/imagetransfer_rotate_right" />

    </LinearLayout>
</LinearLayout>