<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.neopixel.NeopixelBoardSelectorFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:text="@string/neopixelboardselector_standardboardsizes_title"
        android:textAllCaps="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/standardSizesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/neopixelboardselector_customboardsize_title"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/lineStripButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:text="@string/neopixelboardselector_customboardsize_linestrip"
        android:textColor="#000000" />
</LinearLayout>
