<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".app.UartModeFragment">

    <LinearLayout
        android:id="@+id/sendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cccccc"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sendEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="no"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbars="vertical"
                android:singleLine="false" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/sendEditText"
                android:text="@string/uart_send_action" />

            <Spinner
                android:id="@+id/sendPeripheralSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sentBytesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uart_sentbytes_format"
                android:textColor="@color/infotext" />

            <TextView
                android:id="@+id/receivedBytesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/uart_receivedbytes_format"
                android:textColor="@color/infotext" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keyboardAccessoryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cccccc"
            android:orientation="horizontal"
            tools:ignore="ButtonStyle">

            <Button
                android:id="@+id/crtlCButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uart_input_ctrlc" />

            <Button
                android:id="@+id/crtlDButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uart_input_ctrld" />

            <Button
                android:id="@+id/crtlZButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uart_input_ctrlz" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sendLayout"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bufferRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/bufferTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:gravity="top"
            android:scrollbarFadeDuration="0"
            android:textColorHighlight="#ffffff" />
    </LinearLayout>
</RelativeLayout>
